--- a/index.html
+++ b/index.html
@@ -1,51 +1,50 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width,
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,
           user-scalable=no,
           initial-scale=1.0,
           maximum-scale=1.0,
           minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
-  <link rel="stylesheet" href="./style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<div class="card" data-qa="card">
-  <a class="card-photo" href="#">
-    <img src="images/imac.jpeg" alt="">
-  </a>
-  <a href="#" class="card-name">
-    <p>Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</p>
-  </a>
-  <p class="card-code">Код товара: 195434</p>
-  <div class="card-rating">
-    <div class="card-rating-stars">
-      <img src="images/star-active.svg" alt="">
-      <img src="images/star-active.svg" alt="">
-      <img src="images/star-active.svg" alt="">
-      <img src="images/star-active.svg" alt="">
-      <img src="images/star.svg" alt="">
+    <div class="card" data-qa="card">
+        <a class="card-photo" href="#">
+            <img src="images/imac.jpeg" alt="">
+        </a>
+        <a href="#" class="card-name">
+            <p>Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</p>
+        </a>
+        <p class="card-code">Код товара: 195434</p>
+        <div class="card-rating">
+            <div class="card-rating-stars">
+                <img src="images/star-active.svg" alt="">
+                <img src="images/star-active.svg" alt="">
+                <img src="images/star-active.svg" alt="">
+                <img src="images/star-active.svg" alt="">
+                <img src="images/star.svg" alt="">
+            </div>
+            <div class="card-rating-reviews">
+                <p>Отзывов: 5</p>
+            </div>
+        </div>
+        <div class="card-price">
+            <div class="card-price-name">
+                <p>Цена:</p>
+            </div>
+            <div class="card-price-value">
+                <p>69 999 грн</p>
+            </div>
+        </div>
+        <a href="#" data-qa="hover" class="card-buy">
+            <button class="card-buy-btn">Купить</button>
+        </a>
     </div>
-    <div class="card-rating-reviews">
-      <p>Отзывов: 5</p>
-    </div>
-  </div>
-  <div class="card-price">
-    <div class="card-price-name">
-      <p>Цена:</p>
-    </div>
-    <div class="card-price-value">
-      <p>69 999 грн</p>
-    </div>
-  </div>
-  <a href="#" data-qa="hover" class="card-buy">
-    <button class="card-buy-btn">Купить</button>
-  </a>
-</div>
 </body>
 </html>
